# GeneralUtils

./: .gitignore  ProjectTree.md  ReadMe.md  docker-compose.yaml
.github/workflows/: CI-CD.yaml
backend/: .gitignore  Cargo.toml  Dockerfile
backend/assets/: general_utils_db.sql
backend/src/: config.rs  main.rs
backend/src/db/: db_connection.rs  mod.rs
backend/src/handlers/: mod.rs
backend/src/models/: mod.rs  user_model.rs
backend/src/repository/: mod.rs  user_repository.rs
backend/src/routes/: auth_routes.rs  mod.rs  user_routes.rs
backend/src/services/: auth_service.rs  mod.rs
backend/src/utils/: mod.rs  storage.rs
frontend/: Dockerfile  index.html
frontend/src/: index.tsx  main.tsx
frontend/src/modules/: Footer.tsx  NavBar.tsx  Router.tsx
frontend/src/pages/: Board.tsx  ConvertFile.tsx  Donate.tsx  DownloadMedia.tsx  GetLink.tsx  Home.tsx  PageNotFound.tsx  SignIn.tsx  SignUp.tsx
frontend/src/services/: globals-service.tsx  seo-service.tsx  session-service.tsx
frontend/src/styles/: footer.css  index.css  navbar.css  sign-in.css
infrastructure/: ecs-task-definition.json
